# structi

./: .env  Cargo.toml  README.md  ~$писка к курсовой работе (1).docx  Записка к курсовой работе Рудько.docx  Записка к курсовой работе.docx  оценки.xlsx  приложения.docx
src/: main.rs
src/car/: add_car.rs  car.rs  find_car.rs  mod.rs
src/customer/: add_customer.rs  choose_customer.rs  customer.rs  mod.rs
src/employee/: employee.rs
src/enums/: enum_email.rs  mod.rs
src/models/: models.rs
src/order/: close_order.rs  mod.rs  new_order.rs  order.rs
src/prelude/: mod.rs  prelude_main.rs  prelude_valid.rs
src/settings/: mod.rs  settings.rs  settings_car.rs  settings_cust.rs  settings_empl.rs  settings_order.rs
src/sleep/: mod.rs  sleep_700mil.rs
src/validation/: from_str_to_int.rs  input_error.rs  mod.rs  old_value.rs  search.rs  settings.rs  valid_date.rs  valid_email.rs  validation.rs
