[package]
name = "structi"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15"
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7"
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.6", features = ["postgres", "runtime-tokio-native-tls", "migrate"] }
async-std = "1.13.0"
chrono = "0.4.38"
